# Flowgrid

./: .dockerignore  .worker.pids  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  start_cluster.sh  stop_cluster.sh
.github/workflows/: flowgrid-ci.yml
benchmarks/: industry_benchmark.py  throughput_test.py
client/: __init__.py  ray_client.py
common/: __init__.py
common/models/: task.py  worker.py
common/network/: connection.py
common/protocol/: __init__.py  message.py
common/utils/: identifiers.py  logging.py  time_tracking.py
dashboard/: index.html
dashboard/enterprise-ui/: package-lock.json  package.json
deploy/: flowgrid-master.service
deploy/docker/: docker-compose.yml
deploy/k8s/: build_and_load.sh  ingress.yaml  master-deployment.yaml  worker-deployment.yaml
deploy/prometheus/: prometheus.yml
deploy/systemd/: flowgrid-worker@.service  install_service.sh
docs/: SECURITY.md
logs/: worker.pids
master/: http_gateway.py  master.py
master/fault_tolerance/: manager.py
master/network/: server.py
master/queue/: __init__.py  exceptions.py  task_queue.py
master/result_manager/: manager.py
master/scheduler/: core.py  (+1 more)
scripts/: start_cluster.sh
tests/: full_pipeline_test.py  test_chaos.py  test_client.py  test_common.py  test_fault_tolerance.py  test_master.py  test_networking.py  test_queue.py  test_rbac.py  test_resource_aware_scheduler.py  test_result_manager.py  test_scheduler.py  test_serialization.py  test_worker.py  test_worker_manager.py  verify_phase1.py  verify_phase2.py
worker/: worker.py
(+49 files in other folders)
