[project]
name = "flowgrid"
version = "1.0.0"
description = "A production-grade distributed task processing engine built from scratch in Python."
authors = [
    {name = "Shivang", email = "shivang@example.com"}
]
dependencies = [
    "prometheus_client>=0.17.0",
    "psutil>=5.9.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["common", "master", "worker", "client"]
